--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "clearbold/craft-campaignmonitor-lists",
     "description": "View and manage your Campaign Monitor subscriber lists in your Craft CMS control panel, add a subscribe form to your website for new subscribers.",
-    "version": "1.1.12",
+    "version": "2.0.0",
     "type": "craft-plugin",
     "homepage": "https://github.com/clearbold/craft-campaignmonitor-lists",
     "license": "MIT",
@@ -20,7 +20,7 @@
         "campaign monitor"
     ],
     "require": {
-        "craftcms/cms": "^3.4.0-RC1",
+        "craftcms/cms": "^4.0.0",
         "campaignmonitor/createsend-php": "^6.1.1",
         "clearbold/craft-campaignmonitor-service": "^1.0.12"
     },
